syntax = "proto3";

package timetracker;

option go_package = "proto/";

message TimeEntry {
    message Client {
        string id = 1;
        string name = 2;
    }

    message Project {
        string id = 1;
        string name = 2;
    }

    string id = 1;
    string description = 2;
    string start = 3;
    string stop = 4;
    repeated string tags = 5;
    string source = 6;

    Client client = 7;
    Project project = 8;
}

message GetTimeEntriesResponse {
    repeated TimeEntry entries = 1;
}

message GetTimeEntriesRequest {
    string start = 1;
    string stop = 2;
}

service TimeTracker {
    rpc GetTimeEntries (GetTimeEntriesRequest) returns (GetTimeEntriesResponse);
}

